<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageButton
        android:id="@+id/imback"
        android:onClick="btn_back"
        android:layout_marginTop="5dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@android:color/transparent"
        app:srcCompat="@drawable/baseline_apps_24" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/auto_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/auto_theme" />

        <RadioButton
            android:id="@+id/day_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/day_theme" />

        <RadioButton
            android:id="@+id/night_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/night_theme" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="175dp"
        android:layout_height="38dp"
        android:layout_alignBottom="@+id/materialToolbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/imback"
        android:text="@string/textstn"
        android:textStyle="bold"
        android:textSize="30sp" />
</RelativeLayout>