<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="354dp"
        android:layout_height="90dp"
        android:layout_above="@+id/tableLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="11dp"
        android:textColor="@color/purple_700"
        android:text="@string/greetings"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/play_button"
                android:onClick="btn_play"
                android:layout_width="230dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/play"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/settings_button"
                android:onClick="btn_settings"
                android:layout_width="230dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/settings"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/tableLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="212dp"
        android:textStyle="italic"
        android:text="@string/author" />

</RelativeLayout>